--- a/frontend/src/styles/_sidebar.scss
+++ b/frontend/src/styles/_sidebar.scss
@@ -34,6 +34,7 @@
     border-radius: 360px;
     padding-inline: 35px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    outline: none;
 
     &.active, &:hover {
       background-color: rgba(0, 0, 0, 0.2);
