Add draft of the reports page

--- a/frontend/src/styles/_colors.scss
+++ b/frontend/src/styles/_colors.scss
@@ -1,6 +1,6 @@
 :root {
   --text-color: black;
-  --support-background-color: grey;
+  --support-background-color: silver;
   --main-background-color: white;
   --signature-color: #A59ECD;
 }
