--- a/frontend/src/styles/_sidebar.scss
+++ b/frontend/src/styles/_sidebar.scss
@@ -9,6 +9,7 @@
   // transition: 1.5s;
   white-space: nowrap;
   overflow: scroll;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
 
   & p {
     line-height: 20px;
