--- a/frontend/src/styles/_colors.scss
+++ b/frontend/src/styles/_colors.scss
@@ -3,4 +3,10 @@
   --support-background-color: silver;
   --main-background-color: white;
   --signature-color: #A59ECD;
+  @media (min-width: 0px) {
+    --multiplier: 0.66;
+  }
+  @media (min-width: 1600px) {
+    --multiplier: 1;
+  }
 }
