--- a/frontend/src/styles/_layout.scss
+++ b/frontend/src/styles/_layout.scss
@@ -3,5 +3,5 @@
   display: grid;
   grid-template-areas:
     'sidebar main';
-  grid-template-columns: 400px 1fr;
+  grid-template-columns: calc(400px * var(--multiplier)) 1fr;
 }
